# empirica

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCKERHUB_README.md  Dockerfile  Dockerfile.alpine  MANIFEST.in  README.md  pyproject.toml
.docker/: DESCRIPTION.txt  README.md
.empirica-project/: PROJECT_CONFIG.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-scan.yml  release.yml
docs/: README.md
docs/architecture/: ARTIFACT_HYGIENE.md  CANONICAL_STORAGE.md  CHAT.md  CHAT_OVERNIGHT_PLAN.md  CI_CD.md  COCKPIT.md  COMPLETION_TRACKING.md  EPISTEMIC_STATE_COMPLETE_CAPTURE.md  EVENT_LISTENER.md  GATED_ARTIFACT_GRAPH.md  GRAPH_TEMPORAL_LAYER.md  MESH_CONTENT.md  MESH_SHARING_AGREEMENTS.md  MULTI_PROJECT_STORAGE.md  NOETIC_BATCH_SPEC.md  NOTIFY.md  PHASE_AWARE_CALIBRATION.md  PRACTITIONER_DELIBERATION_MODEL.md  PROMPT_FOR_EMPIRICA_CLAUDE_source_aware_sentinel.md  PROPOSAL_AI_SERVICE_SCANNER.md  PROPOSAL_EVENT_LISTENER.md  PROPOSAL_VISIBILITY_TIERS.md  QDRANT_EPISTEMIC_INTEGRATION.md  README.md  SECURITY_AUDIT.md  SENTINEL_ARCHITECTURE.md  SERVICES_SCANNER.md  SUBAGENT_EPISTEMIC_ASSESSMENT.md  SUPPORTING_COMPONENTS.md  separation-of-concerns.md
docs/foundation/: WHY_THE_EMPIRICA_FOUNDATION.md
docs/guides/: PROJECT_SWITCHING_FOR_AIS.md  README.md  UPGRADE_TO_1.11.md
docs/human/: README.md
docs/reference/: DATABASE_SCHEMA_UNIFIED.md  ENVIRONMENT_VARIABLES.md  INTERNAL_CLASSES.md  SENTINEL_GATE_REFERENCE.md  STATUSLINE_REFERENCE.md  TAXONOMY.md
empirica/: __init__.py
empirica-mcp/: README.md  pyproject.toml  test_epistemic.py
empirica-mcp/empirica_mcp/: __init__.py  server.py
empirica-mcp/tests/: test_cli_parity.py  test_command_builder.py  test_registry_integrity.py
empirica/api/: __init__.py  app.py  auth.py  daemon_grants.py  daemon_project.py  entity_mint_auth.py  registry.py  serve_app.py  validation.py
empirica/cli/: __init__.py  __main__.py  asyncio_fix.py  cli_core.py  cli_utils.py  validation.py
empirica/components/: empirical_performance_analyzer.py
empirica/config/: __init__.py  credentials_loader.py  database_config.py  domain_registry.py  goal_scope_loader.py  mco_loader.py  path_resolver.py  profile_loader.py  project_config_loader.py  semantic_index_loader.py  service_registry.py  threshold_loader.py
empirica/core/: __init__.py  attention_budget.py  bayesian_beliefs.py  bus_persistence.py  calibration_config.py  checkpoint_signer.py  context_budget.py  dispatch_bus.py  ecosystem.py  emerged_personas.py  epistemic_brief.py  epistemic_bus.py  epistemic_rollup.py  epistemic_trajectory.py  file_relevance.py  findings_deprecation.py  identity_migration.py  information_gain.py  issue_capture.py  memory_manager.py  mesh_content.py  mesh_content_source.py  mesh_sharing.py  parallel_orchestrator.py  practitioner_presence.py  signaling.py  statusline_cache.py  system_dashboard.py  thresholds.py  version_drift.py  visibility.py  workflow_patterns.py
empirica/data/: __init__.py  connection_pool.py  crm_schema.py  db_adapter.py  epistemic_snapshot.py  epistemic_source.py  flow_state_calculator.py  session_database.py  snapshot_provider.py  visibility.py
empirica/integration/: empirica_action_hooks.py
empirica/integrations/: branch_mapping.py
empirica/metrics/: flow_state.py  token_efficiency.py
empirica/utils/: __init__.py  cli_doc_validator.py  doc_code_integrity.py  finding_refs.py  memory_swap.py  session_resolver.py  structure_health.py
empirica/vision/: readable_translator.py  slide_processor.py
examples/: README.md
examples/codebase-onboarder/: README.md
examples/competitor-monitor/: README.md
examples/missed-opportunities/: README.md
examples/token-budget/: README.md
packaging/chocolatey/: PUSH_INSTRUCTIONS.md  empirica.nuspec
packaging/homebrew/: empirica.rb
project_skills/: empirica-epistemic-framework.yaml
scripts/: check_prompt_parser_drift.py  generate_semantic_index.py  release.py  release_check.py
scripts/cockpit/: migrate-tmux-to-slot.sh
tests/: conftest.py  test_ai_agent_workflow.py  test_artifact_visibility.py  test_auto_init_adopt.py  test_blindspot_intent_gap.py  test_blindspot_outcomes.py  test_blindspot_persist.py  test_bootstrap_aggregator.py  test_bootstrap_global_budget.py  test_bootstrap_mesh_sync.py  test_bootstrap_sidecar_fields.py  test_breadcrumb_dedup.py  test_calibration_route.py  test_canonical_loops.py  test_canonical_seat.py  test_chat_batch_actions.py  test_chat_card_actions.py  test_chat_compact.py  test_chat_model_selector.py  test_chat_narration.py  test_chat_slash.py  test_chat_system_prompt.py  test_check_surface_blindspots.py  test_check_weave_enforce.py  test_check_weave_guidance.py  test_cli_lazy_imports.py  test_cli_prompt_conformance.py  test_cockpit_auto_accept.py  test_cockpit_backoff.py  test_cockpit_instance_actions.py  test_cockpit_instance_state.py  test_cockpit_launcher.py  test_cockpit_liveness.py  test_cockpit_loop_registry.py  test_cockpit_render_injection.py  test_cockpit_self_scheduling.py  test_cockpit_sentinel_pause.py  test_cockpit_tui.py  test_compliance_config.py  test_compliance_consistency.py  (+183 more)
tests/config/: test_check_brier.py  test_compliance_loop.py  test_connective_tissue_checks.py  test_domain_registry.py  test_service_registry.py  test_three_vector_storage.py
tests/core/: test_calibration_config.py  test_check_calibration_nudge.py  test_cockpit_notifications.py  test_dispatch_bus.py  test_message_store_subscribe.py  test_notify_audit.py  test_notify_dispatcher.py  test_notify_dispatcher_view.py
tests/integration/: test_cli_checkpoint_commands.py  test_dispatch_bus_e2e.py  test_e2e_workflows.py  test_goal_architecture_e2e.py  test_session_database_git.py  test_wave1_contract.py
tests/integrations/: test_beads_adapter.py
tests/integrity/: test_checkpoint_bugs_regression.py  test_cli_contracts.py  test_import_integrity.py  test_output_contracts.py  test_version_consistency.py
tests/persona/: test_persona_basic.py
tests/security/: conftest.py
tests/unit/: conftest.py  test_all_cli_commands.py  test_artifact_extractor.py  (+8 more)
(+504 files in other folders)
