[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "empirica"
version = "1.12.12"
description = "Measurement and calibration layer for AI — track what it knows, gate what it does"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "David S. L. Van Assche"}
]
keywords = ["ai", "llm", "epistemic", "self-assessment", "metacognition", "calibration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core data validation and settings
    "pydantic>=2.4.0",          # Security: CVE-2024-3772 ReDoS fix
    "pydantic-settings>=2.14.2", # Security: GHSA-4xgf-cpjx-pc3j fix (2.14.2 floor)
    "python-dotenv>=1.2.2",     # Security: CVE-2026-28684 set_key/unset_key symlink follow (transitive via pydantic-settings)
    "msgpack>=1.2.1",           # Security: GHSA-6v7p-g79w-8964 fix (transitive via CacheControl; pinned defensively)
    "sqlalchemy>=2.0",

    # Configuration and file handling
    "pyyaml>=6.0",              # Required for config/profile loading
    "aiofiles>=23.0",
    "jsonschema>=4.0",          # Required for config validation

    # HTTP and networking
    "httpx>=0.24",
    "requests>=2.33.0",         # Security: CVE-2026-25645 fix

    # Security and cryptography
    "cryptography>=44.0.1,<50", # Security: CVE-2024-6119, CVE-2024-12797 fixes (44.0.1 floor).
                                # Upper bound <48 keeps shared-env compat with hardware-token tools
                                # (pynitrokey, spsdk, etc.) that pin cryptography<47-<48. Bump
                                # the cap when those ecosystems catch up; we use no 48-only API.
    "gitpython>=3.1.41",        # Security: CVE-2024-22190 RCE fix
    "lxml>=6.1.0",              # Security: CVE-2026-41066 XXE in default parser config (transitive via newspaper4k/trafilatura/python-docx)
    "python-multipart>=0.0.27", # Security: CVE-2026-42561 fix (transitive via mcp/nicegui/p4-confidence-tracker; direct pin overrides)
    "pyjwt>=2.13.0",            # Security: PYSEC-2026-175/177/178/179 fixes (transitive via mcp)

    # Optional but commonly used
    "anthropic>=0.39.0",        # Anthropic SDK for adapters
    "tiktoken>=0.5.0",          # Token counting utilities
    "rich>=14.0",                # REQUIRED: pretty printing across most CLI surfaces
    # textual is OPTIONAL — needed only for `empirica tui` and `empirica chat`.
    # Install via `pip install empirica[tui]` to enable. Headless / CI / agent
    # consumers don't need it; `empirica status --json --all` works without.
    "google-generativeai>=0.5",  # REQUIRED: For Gemini 3 / Pro access
    "typer>=0.9",                # REQUIRED: If your CLI uses Typer (highly likely)
    "psutil>=5.9",               # REQUIRED: empirica scan (process/network inventory)
]

[project.optional-dependencies]
# Interactive cockpit + chat TUIs (Textual). Headless installs don't need it.
tui = [
    "textual>=0.50",
]

# Serve-daemon HTTP API (FastAPI). `empirica serve` mounts serve_app.py.
api = [
    "fastapi>=0.115.0,!=0.136.3", # Security: CVE-2024-24762, CVE-2024-47874 fixes;
                                  # MAL-2026-4750 — fastapi 0.136.3 ships hidden `fastar` dep
                                  # (dependency-confusion attack on [standard] extras group)
    "starlette>=1.0.1",          # Security: PYSEC-2026-161 — host-header injection
                                  # (transitive via fastapi; 1.0.0 vulnerable, fixed in 1.0.1)
    "uvicorn>=0.24",
]

# Vector search features
vector = [
    "qdrant-client>=1.7",
]

# Vision/OCR features (experimental)
vision = [
    "pytesseract>=0.3",
    "pillow>=12.1.1",           # Security: CVE-2026-25990 fix
    "opencv-contrib-python>=4.12.0",  # Security: Uninitialized pointer fix
]

# MCP server support
mcp = [
    "mcp>=1.0.0",
]

# Prose evidence grounding (non-code users)
prose = [
    "pyphen>=0.14",     # syllable backend for the in-house readability module
                        # (replaced textstat, which pulled nltk → PYSEC-2026-597; pyphen is nltk-free)
    "proselint>=0.14",
]

# All optional features
all = [
    "empirica[api,vector,vision,mcp,prose]",
]

test = [
    "pytest>=9.0.3",              # Security: CVE-2025-71176 fix
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "dirty-equals>=0.7",
]
lint = [
    # Pinned to minor (auto-pickup patches, no surprise rule additions).
    # Bump the floor + ceiling deliberately when adopting new ruff features —
    # see findings on the recurring local-vs-CI slip pattern (2026-05-14).
    "ruff>=0.15.18,<0.16",
]
typecheck = [
    "pyright>=1.1.330",
]
dev = [
    "empirica[test,lint,typecheck]",
]

[project.scripts]
empirica = "empirica.cli.cli_core:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["empirica"]
exclude = ["tests*", "_archive*", "_dev*", "empirica-mcp*"]

[tool.setuptools.package-data]
empirica = [
    "docs/**/*",
    "config/mco/**/*.yaml",
    "plugins/claude-code-integration/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=empirica",
    "--cov=empirica",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=json",
]
markers = [
    "integration: Integration tests (deselect with '-m \"not integration\"')",
    "integrity: Framework integrity tests (core principle validation)",
    "slow: Slow running tests",
    "requires_mcp: Tests that require MCP server",
]

[tool.coverage.run]
source = ["empirica"]
omit = [
    "tests/*",
    "_archive/*",
    "_dev/*",
    "*/conftest.py",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py310"
include = [
    "empirica/**/*.py",
    "empirica-mcp/**/*.py",
    "tests/**/*.py",
]
exclude = [
    "_archive",
    "_dev",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
extend-select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "S",   # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name
    "B008",   # function call in argument defaults
    # Zealous style rules — low signal, high noise
    "SIM105", # suppressible-exception (contextlib.suppress not always clearer)
    "SIM108", # if-else-to-ternary (often less readable)
    "SIM102", # collapsible-if (often less readable)
    "RUF001", # ambiguous unicode in string (intentional: × in formulas)
    "RUF002", # ambiguous unicode in docstring (intentional)
    "RUF003", # ambiguous unicode in comment (intentional: × in formulas)
    "RUF005", # collection-literal-concatenation (style preference)
    "B905",   # zip-without-strict (pedantic for internal code)
    # Security false-positive heavy
    "S324",   # hashlib-insecure-hash (MD5 used for content IDs/dedup, not crypto)
    "S608",   # hardcoded-sql (false positive: f-string SQL uses internal fragments, not user input; params use ?)
    "S607",   # start-process-with-partial-path (we legitimately call git, python3)
    "S603",   # subprocess-without-shell-equals-true (subprocess is core to our hooks)
    "S112",   # try-except-continue (style variant of S110, too noisy)
    "S310",   # suspicious-url-open (legitimate URL handling)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["empirica"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S108", "S110"]  # allow assert, temp paths, try-except-pass in tests
"tests/**/*.py" = ["S101", "S108", "S110"]  # allow assert, temp paths, try-except-pass in nested tests
"empirica-mcp/tests/*.py" = ["S101", "S108", "S110"]  # mcp package's own tests
"empirica-mcp/tests/**/*.py" = ["S101", "S108", "S110"]
"empirica/core/schemas/*.py" = ["S101"]  # validation asserts in schema converters
"__init__.py" = ["F401", "E402"]  # allow unused imports and late imports in __init__
"empirica/cli/cli_core.py" = ["F405", "E402", "S110"]  # star import + conditional imports + graceful startup
"empirica/cli/command_handlers/*.py" = ["S110"]  # command handlers use try-except-pass for graceful fallback on context resolution
"empirica/cli/command_handlers/monitor_commands.py" = ["E402"]  # conditional imports
"empirica/utils/session_resolver.py" = ["S110"]  # cascading context resolution — try-except-pass is the designed pattern
"empirica/core/epistemic_brief.py" = ["S110"]  # best-effort context enrichment
"empirica/core/post_test/collector.py" = ["S110"]  # evidence collection — missing evidence is normal, not an error
"empirica/core/system_dashboard.py" = ["S110"]  # dashboard aggregation — partial data is acceptable
"empirica/core/memory_manager.py" = ["S110"]  # memory operations — graceful degradation
"empirica/config/path_resolver.py" = ["S110"]  # path resolution with fallback chains
"empirica/core/statusline_cache.py" = ["S110"]  # cache reads — stale/missing cache is normal
"empirica/core/canonical/*.py" = ["S110"]  # artifact extraction — partial extraction is fine
"empirica/data/*.py" = ["S110"]  # database operations — graceful fallback on schema/data issues
"empirica/cli/asyncio_fix.py" = ["S110"]  # asyncio patching — errors are expected on some platforms
"empirica/core/qdrant/*.py" = ["S110"]  # vector store — Qdrant down is a normal condition
"empirica/utils/memory_swap.py" = ["S110"]  # memory swap — fallback on swap issues
"empirica/plugins/**/*.py" = ["S108", "S110"]  # hooks: temp paths + resilient try-except-pass (crash = CLI block)
"scripts/*.py" = ["S108"]  # scripts use temp paths

[tool.pyright]
include = ["empirica", "empirica-mcp", "tests"]
exclude = [
    "_archive",
    "_dev",
    ".venv",
    "venv",
    "**/__pycache__",
]
extraPaths = [
    "empirica/plugins/claude-code-integration/lib",
    "empirica-mcp",  # so `from empirica_mcp.server import ...` resolves to the source tree
]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportDuplicateImport = true
strictListInference = true
strictDictionaryInference = true
# Suppress noisy categories — too many false positives from dynamic Python patterns
reportOptionalMemberAccess = false  # try/except patterns handle None at runtime
reportArgumentType = false          # dynamic dispatch, variable reuse across branches
reportOptionalSubscript = false     # same pattern as OptionalMemberAccess
reportCallIssue = false             # overloaded constructors, optional params
reportOperatorIssue = false         # dynamic types in aggregation code
reportIndexIssue = false            # dict access on union types
reportAssignmentType = false        # Path/str interop, intentional type widening
# Keep these — they catch real bugs
reportUndefinedVariable = true      # catches missing imports, typos
reportReturnType = true             # catches wrong return types
reportRedeclaration = true          # catches shadowing bugs
reportAttributeAccessIssue = true   # catches typos in attribute names
reportGeneralTypeIssues = true      # general type safety

[tool.pyright.defineConstant]
TESTING = true

[tool.empirica.docs-assess]
# "Colors" is a cosmetic enum. The Cortex*/Ntfy* credential models are
# PROPRIETARY integration API surfaces (cortex credential exchange + the ntfy
# push transport) — exempt from the public-doc coverage metric so that passing
# it never requires publicly documenting the proprietary integration surface.
# (David's lane rule: keep the proprietary mesh/integration surface out of the
# public docs; documenting these to satisfy coverage would defeat that.)
ignore_classes = [
    "Colors",
    "CortexCredentialsRequest",
    "CortexCredentialsResponse",
    "NtfyCredentialsRequest",
    "NtfyCredentialsResponse",
]
ignore_paths = ["scripts/"]
