[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "empirica-mcp"
version = "1.12.17"
description = "MCP server for Empirica — AI measurement and calibration tools via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "David S. L. Van Assche"},
]
keywords = ["mcp", "empirica", "calibration", "ai", "measurement", "epistemic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # PINNED to the exact core version (not >=): empirica-mcp is a thin wrapper
    # over the empirica CLI, so a loose constraint let `pipx upgrade empirica-mcp`
    # bump the wrapper while leaving core stale — silently serving a 3-version-old
    # tool set. release.py bumps this pin in lockstep with the version field below.
    "empirica==1.12.17",  # keep == in lockstep with [project].version
    "mcp>=1.25.0",       # MCP SDK (python-multipart CVE-2026-24486 fix in 1.25+)
]

[project.urls]
Homepage = "https://github.com/EmpiricaAI/empirica"
Documentation = "https://github.com/EmpiricaAI/empirica/tree/main/docs"
Repository = "https://github.com/EmpiricaAI/empirica"
Issues = "https://github.com/EmpiricaAI/empirica/issues"

[project.scripts]
empirica-mcp = "empirica_mcp.server:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["empirica_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.11",
    "ruff>=0.15.18,<0.16",
]
